[package]
name = "akatsuki-pp-py"
version = "1.0.5"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "akatsuki_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
akatsuki-pp = { git = "https://github.com/osagiri/akatsuki-pp-rs", rev = "66ab4a0450c332976089b5ceec38dc4c40c36b44" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
