[package]
name = "akatsuki-pp-py"
version = "1.0.5"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "akatsuki_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
akatsuki-pp = { git = "https://github.com/osagiri/akatsuki-pp-rs", rev = "aad4d8e7974dd5a995a3d23dba58da9d4f4d9cf9" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
